<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/md_white_1000"
    android:orientation="horizontal"
    android:paddingBottom="15dp"
    android:paddingTop="15dp">

    <LinearLayout
        android:id="@+id/layout_rank_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/rank" />

        <TextView
            style="@style/Text_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ranking" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/new_pro" />

        <TextView
            style="@style/Text_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pro" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_game_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/type" />

        <TextView
            style="@style/Text_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category" />

    </LinearLayout>


</LinearLayout>
